# matrix_utils

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  azure-pipelines.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: python-package-deploy.yml  python-test.yml
binder/: Brightway 2.5 demonstration.ipynb  environment.yml
dev/: Brightway 2.5 demonstration.ipynb  Graph traversal with modification.ipynb  Indexing speed tests.ipynb  Interfaces which produce results for multiple matrices.ipynb  Mapping speed tests.ipynb  Multifunctionality with Brightway 2.5.ipynb  Real-time modification of hybrid databases.ipynb  Supply chain modification.ipynb  speed_test_unique_indices.py  speed_tests.py
dev/profiling/: bw2.prof  bw25.prof  bw25_profile.txt  bw25_profiling.py  bw2_profile.txt  bw2_profiling.py  profiling-versus-bw2.py
matrix_utils/: __init__.py  aggregation.py  array_mapper.py  errors.py  indexers.py  mapped_matrix.py  mapped_matrix_dict.py  mapped_matrix_list.py  resource_group.py  utils.py  version.py
tests/: array_mapper.py  indexers.py  integration.py  interfaces.py  mapped_matrix.py  masking.py  mmd.py  monte_carlo.py  ordering.py  resource_group.py  utils.py
tests/fixtures/: __init__.py  basic.py  create_static_fixtures.py
